[project]
name = "filereadabilitytool"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "huggingface-hub>=0.33.2",
    "language-tool-python>=2.9.4",
    "pypdf2>=3.0.1",
    "python-docx>=1.2.0",
    "streamlit>=1.46.1",
    "textstat>=0.7.7",
    "torch>=2.7.1",
    "torchaudio>=2.7.1",
    "torchvision>=0.22.1",
    "transformers>=4.53.1",
]
